@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-22T01:12:04Z",
-  "count" : 10,
-  "count_minmax" : [ 10, 11 ],
-  "count_decinc" : [ -1, +0 ],
+  "timestamp" : "2022-05-22T08:18:11Z",
+  "count" : 9,
+  "count_minmax" : [ 9, 11 ],
+  "count_decinc" : [ -2, +0 ],
   "uniques" : 7,
   "uniques_minmax" : [ 7, 7 ],
   "uniques_decinc" : [ -0, +0 ]
