@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-22T01:12:04Z",
+  "timestamp" : "2022-05-22T08:18:11Z",
   "count_outdated" : 275,
   "uniques_outdated" : 150,
-  "count" : 320,
+  "count" : 319,
   "uniques" : 180,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 11 ],
+      "count": 9,
+      "count_minmax": [ 9, 11 ],
       "uniques": 7,
       "uniques_minmax": [ 7, 7 ]
     },
